import data and knit it

--- a/data_wrangling.Rmd
+++ b/data_wrangling.Rmd
@@ -1,28 +1,32 @@
 ---
 title: "data_wrangling"
-output: html_document
+output:
+  html_document:
+    toc: true
+    toc_float: true
+author: Guojing Wu
+data: 2018-09-18
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(tidyverse)
 ```
 
-## R Markdown
+## R data wrangling
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+import my file using relative path
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r}
+litters_data = read_csv(file = "./data_import_examples/FAS_litters.csv")
+litters_data = janitor::clean_names(litters_data)
 ```
 
-## Including Plots
+## look at the data
 
-You can also embed plots, for example:
+```{r}
+head(litters_data)
+tail(litters_data)
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+skimr::skim(litters_data)
 ```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
