--- a/data_wrangling.Rmd
+++ b/data_wrangling.Rmd
@@ -24,9 +24,36 @@ litters_data = janitor::clean_names(litters_data)
 
 ## look at the data
 
+look at the litter data
+
 ```{r}
 head(litters_data)
 tail(litters_data)
 
 skimr::skim(litters_data)
+```
+
+skip some raws and variables
+
+```{r}
+litters_data = read_csv(file = "./data_import_examples/FAS_litters.csv", skip = 10, col_names = FALSE)
+head(litters_data)
+```
+
+Parsing columns
+
+```{r}
+litters_data = read_csv(file = "./data_import_examples/FAS_litters.csv",
+  col_types = cols(
+    Group = col_character(),
+    `Litter Number` = col_character(),
+    `GD0 weight` = col_double(),
+    `GD12 weight` = col_double(),
+    `GD of Birth` = col_integer(),
+    `Pups born alive` = col_integer(),
+    `Pups dead @ birth` = col_integer(),
+    `Pups survive` = col_integer()
+  )
+)
+tail(litters_data)
 ```
